kubernetes/kubeapi-ingress/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeapi-forward
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeapi-forward-ingress
  namespace: kubeapi-forward
spec:
  ingressClassName: nginx
  rules:
  - host: vi2.tone-local
    http:
      paths:
      - backend:
          serviceName: external-ip
        path: /
---
apiVersion: v1
kind: Service
metadata:
  name: kubeapi-forward-service
  namespace: kubeapi-forward
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 6443
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kubeapi-forward-endpoints
  namespace: kubeapi-forward
subsets:
- addresses:
  - ip: 172.30.102.20
  ports:
  - port: 6443
    protocol: TCP
